{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 87,
  "lineage": "24a51595-fb62-c533-748d-f54998272fb6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group/sg-0ccfd4f2d5d504e34",
            "description": "EC2 collectors for MSK",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccfd4f2d5d504e34",
            "ingress": [],
            "name": "msk-ec2-collectors",
            "name_prefix": "",
            "owner_id": "640168415309",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "tags_all": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "timeouts": null,
            "vpc_id": "vpc-088763652e22bcc79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sg-0ccfd4f2d5d504e34",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consumers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group/sg-071492e0ab4503b86",
            "description": "EC2 consumers for MSK",
            "egress": [],
            "id": "sg-071492e0ab4503b86",
            "ingress": [],
            "name": "msk-ec2-consumers",
            "name_prefix": "",
            "owner_id": "640168415309",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "tags_all": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "timeouts": null,
            "vpc_id": "vpc-088763652e22bcc79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sg-071492e0ab4503b86",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk_brokers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group/sg-0348d116ffc83ecac",
            "description": "MSK Serverless broker SG",
            "egress": [],
            "id": "sg-0348d116ffc83ecac",
            "ingress": [],
            "name": "crypto-stream-msk-brokers",
            "name_prefix": "",
            "owner_id": "640168415309",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "tags_all": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "timeouts": null,
            "vpc_id": "vpc-088763652e22bcc79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sg-0348d116ffc83ecac",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "msk_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group-rule/sgr-0376d323c3dd84a2f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Broker outbound",
            "from_port": null,
            "id": "sgr-0376d323c3dd84a2f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0348d116ffc83ecac",
            "security_group_rule_id": "sgr-0376d323c3dd84a2f",
            "tags": null,
            "tags_all": {
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sgr-0376d323c3dd84a2f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.msk_brokers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_iam_9098_from_collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group-rule/sgr-02988926b1863b9a5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Collector-to-broker SASL/IAM TLS within VPC",
            "from_port": 9098,
            "id": "sgr-02988926b1863b9a5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ccfd4f2d5d504e34",
            "region": "ap-south-1",
            "security_group_id": "sg-0348d116ffc83ecac",
            "security_group_rule_id": "sgr-02988926b1863b9a5",
            "tags": null,
            "tags_all": {
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sgr-02988926b1863b9a5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.collector",
            "aws_security_group.msk_brokers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_iam_9098_from_consumers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group-rule/sgr-0c94568aa4508a701",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Consumer-to-broker SASL/IAM TLS within VPC",
            "from_port": 9098,
            "id": "sgr-0c94568aa4508a701",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-071492e0ab4503b86",
            "region": "ap-south-1",
            "security_group_id": "sg-0348d116ffc83ecac",
            "security_group_rule_id": "sgr-0c94568aa4508a701",
            "tags": null,
            "tags_all": {
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sgr-0c94568aa4508a701",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.consumers",
            "aws_security_group.msk_brokers"
          ]
        }
      ]
    }
  ]
}